--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,13 @@
 @import '~bootstrap/scss/bootstrap';
+
+// body {
+//   text-align: center;
+// }
+
+button {
+  margin: 10px;
+}
+
+.card-body {
+  color: #495877;
+}
